--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "declarations": true
   },
   "dependencies": {
+    "await-stream-ready": "^1.0.1",
     "egg": "^2.15.1",
     "egg-bcrypt": "^1.1.0",
     "egg-cors": "^2.2.0",
@@ -14,7 +15,8 @@
     "egg-mongoose": "^3.2.0",
     "egg-scripts": "^2.11.0",
     "egg-swagger-doc-feat": "^2.2.13",
-    "egg-validate": "^2.0.2"
+    "egg-validate": "^2.0.2",
+    "stream-wormhole": "^1.1.0"
   },
   "devDependencies": {
     "autod": "^3.0.1",
