--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.18.0",
     "clipboard": "^2.0.4",
     "element-ui": "^2.12.0",
+    "os": "^0.1.1",
+    "qrcode-terminal": "^0.12.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1"
