--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "lodash": "^4.17.15",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "vuex-persist": "^2.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^9.7.1",
