--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "await-stream-ready": "^1.0.1",
     "egg": "^2.15.1",
     "egg-bcrypt": "^1.1.0",
-    "egg-cors": "^2.2.0",
+    "egg-cors": "^2.2.3",
     "egg-jwt": "^3.1.6",
     "egg-mongoose": "^3.2.0",
     "egg-scripts": "^2.11.0",
@@ -18,6 +18,7 @@
     "egg-validate": "^2.0.2",
     "exceljs": "^3.2.0",
     "stream-wormhole": "^1.1.0",
+    "svg-captcha": "^1.4.0",
     "xlsx": "^0.15.1"
   },
   "devDependencies": {
