--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "clipboard": "^2.0.4",
     "element-ui": "^2.12.0",
     "lodash": "^4.17.15",
+    "open-browser-webpack-plugin": "^0.0.5",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.1",
